--- a/config/database.yml
+++ b/config/database.yml
@@ -1,18 +1,23 @@
 default: &default
-  adapter: postgresql
-  encoding: unicode
-  database: myapp_development
   pool: 5
-  username: postgres
-  password:
-  host: db
+  timeout: 5000
 
 development:
   <<: *default
+  database: db/development.sqlite3
+  adapter: sqlite3
 
 test:
   <<: *default
+  database: db/test.sqlite3
+  adapter: sqlite3
 
 production:
   <<: *default
+  adapter: postgresql
+  database: myapp_development
+  encoding: unicode
+  username: postgres
+  password:
+  host: db
   
