--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,15 @@ services:
 
   web:
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bundle exec rails s -e production -p 3000 -b '0.0.0.0'
     volumes:
       - .:/myapp
     ports:
       - "80:3000"
     depends_on:
       - db
+    environment:
+      - SECRET_KEY_BASE=whatever
 
 volumes:
   postgres-db-volume:
