--- a/test/fixtures/bills.yml
+++ b/test/fixtures/bills.yml
@@ -1,7 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-lucas:
+one:
   name: MyString
+  user: lucas
+  when_payed: 2017-01-09
+  amount: 9.99
 
-valdir:
+two:
   name: MyString
+  user: valdir
+  when_payed: 2017-01-09
+  amount: 9.99
