--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ env:
 script: 
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
-  - rake test
+  - bundle exec rake
