--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 lucas:
-  name: MyString
+  name: "Lucas"
 
 valdir:
-  name: MyString
+  name: "Valdir"
