--- a/test/fixtures/bills.yml
+++ b/test/fixtures/bills.yml
@@ -4,10 +4,16 @@ one:
   name: MyString
   user: lucas
   when_payed: 2017-01-09
-  amount: 9.99
+  amount: 10.00
 
 two:
   name: MyString
   user: valdir
   when_payed: 2017-01-09
-  amount: 9.99
+  amount: 10.00
+
+three:
+  name: MyString
+  user: valdir
+  when_payed: 2017-02-09
+  amount: 10.00
