--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
 
   web:
     build: .
+    restart: always
     command: bundle exec rails s -e production -p 3000 -b '0.0.0.0'
     volumes:
       - .:/myapp
